// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchingForDeviceStep matches snapshot for Android < 12 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
    }
  }
  testID="searching-for-device-step"
>
  <Image
    resizeMode="contain"
    source={
      {
        "uri": "MockImage",
      }
    }
    style={
      {
        "height": 54,
        "overflow": "visible",
      }
    }
  />
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "marginHorizontal": "auto",
        "marginTop": 30,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#141618",
            "fontFamily": "EuclidCircularB-Regular",
            "fontSize": 30,
            "fontWeight": "400",
            "marginVertical": 2,
          },
          undefined,
          undefined,
          {
            "fontFamily": "EuclidCircularB-Bold",
            "fontWeight": "600",
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          {
            "fontSize": 16,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          {
            "fontSize": 22,
          },
        ]
      }
    >
      Looking for device
    </Text>
    <View
      style={
        {
          "marginLeft": 20,
        }
      }
    >
      <ActivityIndicator />
    </View>
  </View>
  <View
    style={
      {
        "marginTop": 30,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#141618",
            "fontFamily": "EuclidCircularB-Regular",
            "fontSize": 30,
            "fontWeight": "400",
            "marginVertical": 2,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
        ]
      }
    >
      Please make sure your Ledger Nano X is:
    </Text>
    <Text
      style={
        [
          {
            "color": "#141618",
            "fontFamily": "EuclidCircularB-Regular",
            "fontSize": 30,
            "fontWeight": "400",
            "marginVertical": 2,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          {
            "paddingLeft": 7,
          },
        ]
      }
    >
      1. Unlock your Ledger Nano X
    </Text>
    <Text
      style={
        [
          {
            "color": "#141618",
            "fontFamily": "EuclidCircularB-Regular",
            "fontSize": 30,
            "fontWeight": "400",
            "marginVertical": 2,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          {
            "paddingLeft": 7,
          },
        ]
      }
    >
      2. Install and open the Ethereum app
    </Text>
    <Text
      style={
        [
          {
            "color": "#141618",
            "fontFamily": "EuclidCircularB-Regular",
            "fontSize": 30,
            "fontWeight": "400",
            "marginVertical": 2,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          {
            "paddingLeft": 7,
          },
        ]
      }
    >
      3. Enable Bluetooth
    </Text>
    <Text
      style={
        [
          {
            "color": "#141618",
            "fontFamily": "EuclidCircularB-Regular",
            "fontSize": 30,
            "fontWeight": "400",
            "marginVertical": 2,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          {
            "paddingLeft": 7,
          },
        ]
      }
    >
      4. Location is enabled with use precise location on
    </Text>
    <Text
      style={
        [
          {
            "color": "#141618",
            "fontFamily": "EuclidCircularB-Regular",
            "fontSize": 30,
            "fontWeight": "400",
            "marginVertical": 2,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          {
            "paddingLeft": 7,
          },
        ]
      }
    >
      5. Do not disturb must be turned off
    </Text>
  </View>
  <TouchableOpacity
    onPress={[Function]}
  >
    <Text
      numerOfLines={2}
      style={
        [
          {
            "color": "#141618",
            "fontFamily": "EuclidCircularB-Regular",
            "fontSize": 30,
            "fontWeight": "400",
            "marginVertical": 2,
          },
          undefined,
          undefined,
          {
            "fontFamily": "EuclidCircularB-Bold",
            "fontWeight": "600",
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          {
            "color": "#0376c9",
          },
          undefined,
          undefined,
          undefined,
          {
            "flex": 1,
            "flexWrap": "wrap",
            "marginLeft": 20,
            "marginRight": 20,
            "marginTop": 40,
          },
        ]
      }
    >
      How to install the Ethereum app on a Ledger device
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`SearchingForDeviceStep matches snapshot for Android 12+ 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
    }
  }
  testID="searching-for-device-step"
>
  <Image
    resizeMode="contain"
    source={
      {
        "uri": "MockImage",
      }
    }
    style={
      {
        "height": 54,
        "overflow": "visible",
      }
    }
  />
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "marginHorizontal": "auto",
        "marginTop": 30,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#141618",
            "fontFamily": "EuclidCircularB-Regular",
            "fontSize": 30,
            "fontWeight": "400",
            "marginVertical": 2,
          },
          undefined,
          undefined,
          {
            "fontFamily": "EuclidCircularB-Bold",
            "fontWeight": "600",
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          {
            "fontSize": 16,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          {
            "fontSize": 22,
          },
        ]
      }
    >
      Looking for device
    </Text>
    <View
      style={
        {
          "marginLeft": 20,
        }
      }
    >
      <ActivityIndicator />
    </View>
  </View>
  <View
    style={
      {
        "marginTop": 30,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#141618",
            "fontFamily": "EuclidCircularB-Regular",
            "fontSize": 30,
            "fontWeight": "400",
            "marginVertical": 2,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
        ]
      }
    >
      Please make sure your Ledger Nano X is:
    </Text>
    <Text
      style={
        [
          {
            "color": "#141618",
            "fontFamily": "EuclidCircularB-Regular",
            "fontSize": 30,
            "fontWeight": "400",
            "marginVertical": 2,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          {
            "paddingLeft": 7,
          },
        ]
      }
    >
      1. Unlock your Ledger Nano X
    </Text>
    <Text
      style={
        [
          {
            "color": "#141618",
            "fontFamily": "EuclidCircularB-Regular",
            "fontSize": 30,
            "fontWeight": "400",
            "marginVertical": 2,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          {
            "paddingLeft": 7,
          },
        ]
      }
    >
      2. Install and open the Ethereum app
    </Text>
    <Text
      style={
        [
          {
            "color": "#141618",
            "fontFamily": "EuclidCircularB-Regular",
            "fontSize": 30,
            "fontWeight": "400",
            "marginVertical": 2,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          {
            "paddingLeft": 7,
          },
        ]
      }
    >
      3. Enable Bluetooth
    </Text>
    <Text
      style={
        [
          {
            "color": "#141618",
            "fontFamily": "EuclidCircularB-Regular",
            "fontSize": 30,
            "fontWeight": "400",
            "marginVertical": 2,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          {
            "paddingLeft": 7,
          },
        ]
      }
    >
      4. Nearby devices is enabled
    </Text>
    <Text
      style={
        [
          {
            "color": "#141618",
            "fontFamily": "EuclidCircularB-Regular",
            "fontSize": 30,
            "fontWeight": "400",
            "marginVertical": 2,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          {
            "paddingLeft": 7,
          },
        ]
      }
    >
      5. Do not disturb must be turned off
    </Text>
  </View>
  <TouchableOpacity
    onPress={[Function]}
  >
    <Text
      numerOfLines={2}
      style={
        [
          {
            "color": "#141618",
            "fontFamily": "EuclidCircularB-Regular",
            "fontSize": 30,
            "fontWeight": "400",
            "marginVertical": 2,
          },
          undefined,
          undefined,
          {
            "fontFamily": "EuclidCircularB-Bold",
            "fontWeight": "600",
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          {
            "color": "#0376c9",
          },
          undefined,
          undefined,
          undefined,
          {
            "flex": 1,
            "flexWrap": "wrap",
            "marginLeft": 20,
            "marginRight": 20,
            "marginTop": 40,
          },
        ]
      }
    >
      How to install the Ethereum app on a Ledger device
    </Text>
  </TouchableOpacity>
</View>
`;
